  * Fixed writing label and comment in tiff images (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25516).

2015-05-03  6.9.1-3 Glenn Randers-Pehrson <glennrp@image...>
  * Fixed bug with "-define png:format=x" in png.c, introduced in version
    6.8.9-0, that caused the define to be ignored.

2015-04-20  6.9.1-3 Cristy  <quetzlzacatenango@image...>
  * Support -define compose:clamp=false option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26946).
  * Don't extend any user supplied image buffer in SeekBlob() (bug report
    from a.chernij@corp...).
  * Improved reproducible builds (reference
    https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=783933).
  * Draw a rectangle of width & height of 1 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24874).

2015-04-19  6.9.1-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-2, SVN revision 18429.

2015-04-09  6.9.0-2 Glenn Randers-Pehrson <glennrp@image...>
  * Avoid using a NULL alpha_image or color_image in the JNG decoder.

2015-04-07  6.9.1-2 Cristy  <quetzlzacatenango@image...>
  * Fix JPEG-2000 transparency on write (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27304).
  * Identify now identifies PSD (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26948).
  * Speed up writing to TGA (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27369).

2015-04-06  6.9.1-2 Dirk Lemstra <dirk@lem.....org>
  * Reduce draw epsilon to increase mathematical stability.
  * Fixed UTF8 issue when determining the current working directory
    on Windows (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27295).

2015-04-04  6.9.1-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-1, SVN revision 18308.

2015-03-21  6.9.1-1 Cristy  <quetzlzacatenango@image...>